--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
   #    volumes:
   #      - 'mariadb_data:/bitnami/mariadb'
   mediawiki:
-    image: 'analogj/bitnami-mediawiki:gcp'
+    build: .
+    image: 'analogj/mediawiki-gcp:1.33'
     ports:
       - '80:8080'
       - '443:8443'
