--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,42 @@
 version: '2'
 services:
-  #  mariadb:
-  #    image: 'docker.io/bitnami/mariadb:10.3-debian-10'
-  #    environment:
-  #      - ALLOW_EMPTY_PASSWORD=yes
-  #      - MARIADB_USER=bn_mediawiki
-  #      - MARIADB_DATABASE=bitnami_mediawiki
-  #    volumes:
-  #      - 'mariadb_data:/bitnami/mariadb'
+  parsoid:
+    image: 'thenets/parsoid:0.11'
+    environment:
+      - PARSOID_DOMAIN_localhost=http://mediawiki/api.php
+
+  mariadb:
+    image: 'docker.io/bitnami/mariadb:10.3-debian-10'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_ROOT_PASSWORD=password
+      - MARIADB_ROOT_USER=root
+#      volumes:
+#        - 'mariadb_data:/bitnami/mariadb'
   mediawiki:
     build: .
     image: 'analogj/mediawiki-gcp:1.33'
     ports:
-      - '80:8080'
+      - '80:80'
       - '443:8443'
     environment:
       - BITNAMI_DEBUG=true
-      - MEDIAWIKI_DATABASE_HOST
+      - MEDIAWIKI_DATABASE_HOST=mariadb
       - MEDIAWIKI_DATABASE_PORT_NUMBER=3306
       - MEDIAWIKI_DATABASE_USER=root
-      - MEDIAWIKI_DATABASE_PASSWORD
+      - MEDIAWIKI_DATABASE_PASSWORD=password
       - MEDIAWIKI_DATABASE_NAME=bitnami_mediawiki
-      - MYSQL_CLIENT_DATABASE_HOST
+      - MYSQL_CLIENT_DATABASE_HOST=mariadb
       - MYSQL_CLIENT_DATABASE_PORT_NUMBER=3306
       - MYSQL_CLIENT_DATABASE_ROOT_USER=root
-      - MYSQL_CLIENT_DATABASE_ROOT_PASSWORD
+      - MYSQL_CLIENT_DATABASE_ROOT_PASSWORD=password
       - MYSQL_CLIENT_CREATE_DATABASE_NAME=bitnami_mediawiki
       - MYSQL_CLIENT_CREATE_DATABASE_CHARACTER_SET=utf8
       - MYSQL_CLIENT_CREATE_DATABASE_COLLATE=utf8_general_ci
       # we cannot create a user/password here because bitnami uses mariadb syntax that is incompatible with GCP.
 
-#    volumes:
-#      - 'mediawiki_data:/bitnami/mediawiki'
+    volumes:
+      - './LocalSettings.local.php:/bitnami/mediawiki/LocalSettings.php'
 #    depends_on:
 #      - mariadb
 #volumes:
