--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,8 @@ stages:
 
 before_script:
   # Login to Google Container Registry (push credential from global-secret project).
-  - docker login -u _json_key --password-stdin https://gcr.io < $GCP_SA_KEY
+  - base64 -d $GCP_SA_KEY > key.json
+  - docker login -u _json_key --password-stdin https://gcr.io < key.json
 
 build:
   stage: build
